ADDED feature to get only coordinator name list
