# app/lib/swagger-ui/api_docs.json
@@ -141,6 +141,39 @@
                 }
             }
         },
+        "/coordinator/name-list": {
+            "get": {
+                "summary": "Get all coordinator name list",
+                "tags": [
+                    "Coordinator"
+                ],
+                "security": [
+                    {
+                        "api_key": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully fetched all coordinators"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
         "/coordinator/{coordinatorId}": {
             "put": {
                 "summary": "Update coordinator's details",
